--- a/props-mark-morgan-seth/src/App.css
+++ b/props-mark-morgan-seth/src/App.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Anta", sans-serif;
+  background-image: url("./backrground.webp");
+  color: #fff;
 }
 
 .parent-container {
@@ -41,8 +43,15 @@ button {
 
 h1 {
   font-size: 50px;
+  color: #80181A;
 }
 
 .roll-title {
   font-size: 20px;
 }
+
+.dice-img {
+  max-width: 150px;
+  max-height: 150px;
+}
+
