--- a/functional-props-morgan-amir/src/App.css
+++ b/functional-props-morgan-amir/src/App.css
@@ -1,4 +1,64 @@
-/* .main-container {
+body {
+  background-color: #F7F5C9;
+}
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.header-container {
+  display: flex;
+  justify-content: center;
+}
+
+.main-container {
   display: flex;
   justify-content: space-between;
-} */
+}
+
+.menu-cont {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.menu-cont2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.center-text {
+  display: flex;
+  align-items: center;
+}
+
+.food-on-order {
+  display: flex;
+  justify-content: end;
+}
+
+.total {
+  display: flex;
+  justify-content: end;
+}
+
+button {
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 10px;
+  max-width: 20dvw;
+  cursor: pointer;
+}
+
+img {
+  max-height: 20dvh;
+  min-width: 20dvh;
+  border-radius: 3px;
+}
